# CoD4x-launcher

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cod4v17_patch/: Cargo.toml
launcher/: Cargo.toml  build.rs  manifest.xml
launcher/src/launcher/: cod4x.rs  entrypoint.rs  error.rs  filesystem.rs  http.rs  iw3mp.rs  miles32.rs  mod.rs  module.rs  msg_box.rs  process.rs  security_info.rs  sha1.rs  wstring.rs  zip.rs
launcher/src/launcher/updater/: cod4x.rs  component.rs  github.rs  gui.rs  launcher.rs  mod.rs  mss32.rs  updater_app.rs
mss/: Cargo.toml
mss/src/: lib.rs
mss/src/mss/: entrypoint.rs  mod.rs  symbols.rs
