[package]
name = "launcher"
version = "1.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
sha1 = "^0.10"
user32-sys = "0.2.0"
libloading = "0.9.0"
hex = "0.4.3"
curl = { version = "0.4.46", features = ["static-curl"] }
nwg = { version = "1.0.13", package = "native-windows-gui" }
json = { version = "1.0.125", package = "serde_json" }
glob = "0.3.1"
self-replace = "1.4.0"
semver = "1.0.23"
regex = "1.10.6"
zip = { version = "6.0.0", default-features = false, features = ["deflate", "deflate64"] }

[dependencies.winapi]
version = "0.3.9"
features = [
    "handleapi",
    "minwindef",
    "processthreadsapi",
    "securitybaseapi",
    "winnt",
    "libloaderapi",
    "winuser",
    "shellapi",
    "memoryapi",
    "processenv",
    "aclapi",
    "knownfolders",
    "shlobj",
    "combaseapi",
]

[dependencies.cod4v17_patch]
path = "../cod4v17_patch"
version = "1.0.0"
optional = true

[features]
default = []
cod4v17_patch = ["dep:cod4v17_patch"]

[build-dependencies]
embed-resource = "3.0.6"

[lib]
crate-type = ["cdylib"]

