[package]
name = "mss32"
version = "1.0.0"
edition = "2021"

[package.metadata.rustflags]
windows = [
    "-C", "target-feature=+crt-static",
    "-C", "link-arg=-DISOLATION_AWARE_ENABLED=1",
    "-C", "link-arg=-static"
]

[dependencies.winapi]
version = "0.3.9"
features = [
    "handleapi",
    "minwindef",
    "processthreadsapi",
    "libloaderapi",
    "winuser",
    "shellapi",
    "memoryapi",
    "knownfolders",
    "shlobj",
    "combaseapi",
]

[build-dependencies]
nasm-rs = "0.3.1"

[lib]
crate-type = ["cdylib"]

